tests-integration/fixtures/checking/1772566980_derive_newtype_missing_instance/Main.snap
---
source: tests-integration/src/fixtures.rs
assertion_line: 39
expression: report
---
Terms
Identity :: forall (@a :: Type). (a :: Type) -> Identity (a :: Type)

Types
Identity :: Type -> Type

Derived
derive Show (Identity String)

Roles
Identity = [Representational]

Diagnostics
error[NoInstanceFound]: No instance found for: Show String
  --> 7:1..7:47
  |
7 | derive newtype instance Show (Identity String)
  | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
